force-app/main/default/objects/Minor_Employee__c/Minor_Employee__c.object-meta.xml
<CustomObject>
    <description>The Minor Employees object tracks information about minor employees who are parts of organizations with Reports of Labor Code Violations. It is linked via lookup to the Report of Labor Code Violation.</description>
    <label>Minor Employee</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Minor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minor Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>