force-app/main/default/objects/Minor_Employee__c/fields/Full_Name_First_Last_and_nick_names__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_First_Last_and_nick_names__c</fullName>
    <description>Full Name of the Minor Employee including first and last name and any "nick" names</description>
    <inlineHelpText>Full Name of the Minor Employee including first and last name and any "nick" names</inlineHelpText>
    <label>Full Name (First, Last, and nick names)</label>
    <type>TextArea</type>
</CustomField>