force-app/main/default/objects/Minor_Employee__c/fields/Job_Position_Type_of_Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Job_Position_Type_of_Work_Performed__c</fullName>
    <description>The position of the employed minor or the type of work performed by the minor.</description>
    <inlineHelpText>The position of the employed minor or the type of work performed by the minor.</inlineHelpText>
    <label>Job Position/Type of Work Performed</label>
    <type>TextArea</type>
</CustomField>